--- a/index.html
+++ b/index.html
@@ -31,7 +31,21 @@
         </script>
     </div>
 </div>
+<div style="text-align: center; margin: 20px 0;">
+    <button type="button" 
+            onclick="initiateMercadoPagoPayment(5.00, 'Versión Beta-basic (β)')"
+            style="background-color: #007bff; color: white; padding: 15px 25px; margin: 10px; border: none; border-radius: 5px; font-weight: bold; cursor: pointer;">
+        💎 DESCARGAR PDF PREMIUM β ($5.00 MXN)
+    </button>
+</div>
 
+<div style="text-align: center; margin: 20px 0;">
+    <button type="button" 
+            onclick="initiateMercadoPagoPayment(7.00, 'Versión Beta-1.0.1 (β)')"
+            style="background-color: #6f42c1; color: white; padding: 15px 25px; margin: 10px; border: none; border-radius: 5px; font-weight: bold; cursor: pointer;">
+        🌟 DESCARGAR PDF AVANZADO β ($7.00 MXN)
+    </button>
+</div>
 <hr class="divisor">
 
 <div id="notificacionExito" style="display: none; background-color: #d4edda; color: #155724; padding: 15px; margin: 10px auto; border: 1px solid #c3e6cb; border-radius: 5px; max-width: 500px;">
